force-app/main/default/objects/PatientReferel__c/PatientReferel__c.object-meta.xml
<CustomObject>
    <label>PatientReferel</label>
    <nameField>
        <displayFormat>REF-{0000000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PatientReferels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>