force-app/main/default/objects/PatientReferel__c/fields/BlockHash__c.field-meta.xml
<CustomField>
    <fullName>BlockHash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>BlockHash</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>