force-app/main/default/objects/PatientReferel__c/fields/FacilityAddress__c.field-meta.xml
<CustomField>
    <fullName>FacilityAddress__c</fullName>
    <label>FacilityAddress</label>
    <type>TextArea</type>
</CustomField>