force-app/main/default/objects/PatientReferel__c/fields/FacilityName__c.field-meta.xml
<CustomField>
    <fullName>FacilityName__c</fullName>
    <label>FacilityName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>