force-app/main/default/objects/PatientReferel__c/fields/HCP_Name__c.field-meta.xml
<CustomField>
    <fullName>HCP_Name__c</fullName>
    <label>HCP-Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>