force-app/main/default/objects/PatientReferel__c/fields/PatientHash__c.field-meta.xml
<CustomField>
    <fullName>PatientHash__c</fullName>
    <label>PatientHash</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>