force-app/main/default/objects/PatientReferel__c/fields/PriorHash__c.field-meta.xml
<CustomField>
    <fullName>PriorHash__c</fullName>
    <label>PriorHash</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>