force-app/main/default/objects/PatientReferel__c/fields/RefSequence__c.field-meta.xml
<CustomField>
    <fullName>RefSequence__c</fullName>
    <label>RefSequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>