force-app/main/default/objects/PatientReferel__c/fields/TansactionFieldList__c.field-meta.xml
<CustomField>
    <fullName>TansactionFieldList__c</fullName>
    <label>TansactionFieldList</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>