force-app/main/default/objects/PatientReferel__c/fields/TransactionHash__c.field-meta.xml
<CustomField>
    <fullName>TransactionHash__c</fullName>
    <label>TransactionHash</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>